vpc.tf
resource "aws_vpc" "main" { 
 cidr_block = var.vpc_cidr 
 tags = { 
          Project = "demo-assignment"
          Name = "My Demo VPC" 
        }
}
